# hello-postmodern-python-tooling

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
app/: __init__.py  api.py
tests/fast/: test_covered_by_test.py  test_root.py
tests/slow/: test_root_slow.py
